AC_PREREQ([2.63])
AC_INIT([$$PROJECTNAME$$],[1.0])
AC_CONFIG_SRCDIR([$$PROJECTNAME$$.c])

PROJECTNAME=$$PROJECTNAME$$
AC_SUBST(PROJECTNAME)

#Check for programs
AC_PROG_CC
AC_PROG_INSTALL

#Check for rpmbuild
AC_CHECK_PROG(RPMBUILD, rpmbuild, rpmbuild)

RELEASE=1
AC_SUBST(RELEASE)

# --enable-debug option
AC_ARG_ENABLE([debug], AC_HELP_STRING([--enable-debug],[Compile with debug options]),	CFLAGS="$CFLAGS -g -DDEBUG",	CFLAGS="$CFLAGS -O3")

$$LIBXML2_WITH$$

# Created shared library is intended for use with libnetconf
REQS="$REQS, libnetconf"

# Checks for libraries.
$$LIBXML2_CHECK$$

# Here you can add checks for other libraries your code uses
#AC_SEARCH_LIBS([ncds_apply_rpc],[netconf], ,AC_MSG_ERROR([libnetconf not found!]))
#REQS="$REQS, libnetconf"
#BUILDREQS="$BUILDREQS, libnetconf-devel"

# Checks for header files.
# Here you can add some header files
#AC_CHECK_HEADER([libnetconf.h], ,AC_MSG_ERROR([libnetconf.h not found!]))

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_UINT32_T

# Checks for library functions.
#AC_CHECK_FUNCS([strdup])

AC_SUBST(RPMBUILD)
if test -z "$RPMBUILD"; then
	AC_MSG_WARN([Due to missing rpmbuild you will not able to generate RPM package.])
fi

AC_SUBST(REQS)
AC_SUBST(BUILDREQS)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([$$PROJECTNAME$$.spec])

AC_OUTPUT
