AC_PREREQ([2.63])
AC_INIT([$$PROJECTNAME$$], [1.0], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([$$PROJECTNAME$$.c])

PROJECTNAME=$$PROJECTNAME$$
AC_SUBST(PROJECTNAME)

# --enable-debug option
AC_ARG_ENABLE([debug],
	AC_HELP_STRING([--enable-debug],[Compile with debug options]),
	CFLAGS="$CFLAGS -g -DDEBUG",
	CFLAGS="$CFLAGS -O3"
)
$$LIBXML2_WITH$$
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Use libtool
AC_PROG_LIBTOOL
# Always use ./libtool unless overridden from command-line
if test -z "$libtool"; then
	libtool='./libtool'
fi
AC_SUBST(libtool)

# Checks for libraries.
AC_SEARCH_LIBS([ncds_apply_rpc], [netconf], ,AC_MSG_ERROR([libnetconf not found!]))
$$LIBXML2_CHECK$$
# Checks for header files.
AC_CHECK_HEADERS([stdlib.h libnetconf.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_UINT32_T

# Checks for library functions.
#AC_CHECK_FUNCS([strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
